--- a/editor/client/css/theme_norm.css
+++ b/editor/client/css/theme_norm.css
@@ -46,10 +46,9 @@ table-layout:fixed;
 }
 
 .prop-background-color {
-	height: 10px;
-	width: 20px;
-	
-	border: 1px solid #000000;
+	border:1px solid #ACA899;
+	height:10px;
+	width:10px;
 }
 
 #oryx_editor_header {
